<resources>
    <string name="app_name">Read Track</string>
    <string name="copertina">Copertina</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="google_login">Log in with Google</string>
    <string name="new_account">New to Read Track? </string>
    <string name="register">Register now!</string>
    <string name="immagine_login">Immagine login</string>
    <string name="error_password">La password inserita è errata</string>
    <string name="error_email">L\'email inerita è errata</string>
    <string name="check_login_data_message">Email o password errate</string>
    <string name="searchbar_hint">Inserisci il titolo di un libro</string>
    <string name="books">books</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_item">book_item</string>
    <string name="book_title">title</string>
    <string name="author">author</string>
    <string name="cover">cover</string>
    <string name="favourite">favourite</string>
    <string name="image_cover">cover image</string>
    <string name="fav_content_description">fav_book</string>
    <string name="book_author">author</string>
    <string name="book_year">year</string>
    <string name="book_genre">genre</string>
    <string name="book_publisher">publisher</string>
    <string name="book_isbn">isbn</string>
    <string name="book_description">description</string>
    <string name="bookargument">BookArgument</string>
    <string name="isbn_search_button">isbn_search_button</string>
    <string name="add_favourite">add_favourite</string>
    <string name="continua_a_leggere">... Continua a leggere</string>
    <string name="restringi">Restringi</string>
    <string name="actual_page">actual_page</string>
    <string name="regisrationImage">immagine registrazione</string>
    <string name="registration">Register</string>
    <string name="unexpected_error">erroreunexpected</string>
    <string name="error_user_collision_message">user collision error</string>
    <string name="error_login_password_message">errorelogin password</string>
    <string name="error_login_user_message">errore login user</string>
    <string name="error_no_google_account_found_message">nessun account google trovato</string>
    <string name="preferiti">Preferiti</string>
    <string name="stai_leggendo">Stai leggendo</string>
    <string name="publisher">publisher</string>
    <string name="date">date</string>
    <string name="readtrack">ReadTrack</string>
    <string name="reset_password">Reset password</string>
    <string name="aggiungi_segnalibro">Aggiorna segnalibro</string>
    <string name="salva_per_dopo">Salvati per dopo</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="update">Aggiorna segnalibro</string>
    <string name="Logout">Logout</string>
    <string name="percentage">percentuale</string>
    <string name="reading_percentage">percentuale</string>
    <string name="modifica_immagine_profilo">Modifica immagine profilo</string>
</resources>