<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="43dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/book_title"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cover"
                android:layout_width="105dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:src="@drawable/image_not_found"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_year"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_genre"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_publisher"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_isbn"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Segnalibro:"
                app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
                app:layout_constraintEnd_toStartOf="@+id/num_pages"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:contentDescription="@string/actual_page"/>

            <TextView
                android:id="@+id/num_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/000"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/linearProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:indicatorColor="@color/pink"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                app:trackThickness="20dp" />


            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <Button
                android:id="@+id/add_favourite"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/add_favourite"
                android:text="Aggiungi ai preferiti"
                android:textSize="13dp"
                app:layout_constraintEnd_toStartOf="@+id/add_reading"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/add_reading"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="@string/add_favourite"
                android:text="Inizia a Leggere"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/add_favourite"
                app:layout_constraintTop_toTopOf="@+id/view"
                tools:ignore="TextSizeCheck" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/book_description"
                android:paddingStart="25dp"
                android:paddingTop="25dp"
                android:paddingEnd="25dp"
                android:text="@string/book_description"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_favourite"
                android:maxLines="10"/>

            <TextView
                android:id="@+id/read_more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continua_a_leggere"
                android:textColor="@color/blue"
                android:paddingStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:visibility="gone" />
            <TextView
                android:id="@+id/read_less_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restringi"
                android:textColor="@color/blue"
                android:paddingStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/pink"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/description"
                tools:layout_editor_absoluteX="34dp">

                <TextView
                    android:id="@+id/title_oth_books"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Ti potrebbe interessare anche" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_other_books"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>